objects/ADMDistyUserRegions__c.object
<CustomObject>
    <description>According to user story W-000339 to populate Regional Manager and Distribution Manager Columns in ADM_Forecasting summary page.</description>
    <fields>
        <fullName>Distribution_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distribution Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ADMDistyUserRegions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region_Code__c</fullName>
        <label>Region Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Description__c</fullName>
        <label>Region Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ADMDistyUserRegions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DistyUserRegion</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Distribution_Manager__c</columns>
        <columns>Regional_Manager__c</columns>
        <columns>Region_Code__c</columns>
        <columns>Region_Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DistyUserRegions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>